# ZeusEngineCore

./: .gitignore  .gitmodules  CMakeLists.txt
include/: ZeusEngine.h
include/ZeusEngineCore/: Application.h  AssetHandle.h  AssetLibrary.h  AssetSerializer.h  AssetTypes.h  CameraSystem.h  Components.h  EngineConstants.h  Entity.h  Event.h  EventDispatcher.h  FileStreamReader.h  FileStreamWriter.h  GPUHandle.h  IDescriptorBuffer.h  IMesh.h  IRenderer.h  IRendererAPI.h  IRendererBackend.h  IShader.h  ITexture.h  InfoVariants.h  InputEvents.h  Layer.h  Material.h  MaterialManager.h  MeshComp.h  MeshLibrary.h  MeshManager.h  ModelImporter.h  ModelLibrary.h  OpenGLRenderer.h  Project.h  RenderSystem.h  Renderer.h  RendererAPI.h  Scene.h  ScopedWaiter.h  SerializerCommon.h  Shader.h  (+11 more)
include/ZeusEngineCore/asset/: AssetHandle.h  AssetLibrary.h  AssetSerializer.h  AssetTypes.h  GPUHandle.h
include/ZeusEngineCore/core/: API.h  Application.h  InputEvents.h  Layer.h  Project.h  Util.h  Vertex.h  Window.h
include/ZeusEngineCore/engine/: CameraSystem.h  Components.h  Entity.h  ModelImporter.h  PhysicsSystem.h  RenderSystem.h  Renderer.h  Scene.h  SceneSerializer.h  UUID.h  ZEngine.h  ZeusPhysicsSystem.h
include/ZeusEngineCore/engine/rendering/: VKBackend.h  VKContext.h  VKRenderer.h  VKResources.h  VKUtils.h
include/ZeusEngineCore/input/: Input.h  KeyCodes.h  MouseCodes.h
include/ZeusEngineCore/scripting/: CompRegistry.h  ISystem.h  RuntimeComp.h  SystemManager.h
include/ZeusEngineCore/stream/: FileStreamReader.h  FileStreamWriter.h  SerializerCommon.h  StreamReader.h  StreamWriter.h
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: Transform.cpp  Utils.cpp  Utils.h
src/Components/: Components.cpp  MeshComp.cpp
src/Engine/: Application.cpp  Application.h  AssetTypes.cpp  CompRegistry.cpp  LayerStack.cpp  LayerStack.h  ZEngine.cpp
src/ImGUILayers/: ImGUILayer.cpp  ImGUILayer.h  ImGUILayerOpenGL.cpp  ImGUILayerOpenGL.h  ImGUILayerVulkan.cpp  ImGUILayerVulkan.h
src/Project/: Project.cpp
src/Systems/: Input.cpp  SystemManager.cpp
src/Systems/Physics/: PhysicsSystem.cpp  ZeusPhysicsSystem.cpp
src/Systems/Renderer/: AssetLibrary.cpp  AssetSerializer.cpp  FrameGraph.cpp  FrameGraph.h  IContext.cpp  IContext.h  IResourceManager.cpp  IResourceManager.h  MeshLibrary.cpp  ModelImporter.cpp  ModelLibrary.cpp  RenderSystem.cpp  Renderer.cpp  Window.cpp
src/Systems/Renderer/OpenGL/: GLContext.cpp  GLContext.h  GLResourceManager.cpp  GLResourceManager.h
src/Systems/Renderer/Vulkan/: Skybox.cpp  Skybox.h  SkyboxRenderer.cpp  SkyboxRenderer.h  VKBackend.cpp  VKDescriptors.cpp  VKDescriptors.h  VKImages.cpp  VKImages.h  VKInit.cpp  VKInit.h  VKPipelines.cpp  VKPipelines.h  VKRenderer.cpp  VKResources.cpp  VKTypes.cpp  VKTypes.h  VkContext.cpp  VkHelpers.h
src/Systems/Scene/: CameraSystem.cpp  Entity.cpp  Scene.cpp  SceneSerializer.cpp  SceneSerializer.h
src/Systems/renderer/: RenderSystem.cpp  Renderer.cpp
src/Systems/renderer/OpenGL/: GLContext.cpp  GLContext.h
src/Utils/: FileStreamReader.cpp  FileStreamWriter.cpp  UUID.cpp  Util.cpp
src/renderer/: IDescriptorBuffer.cpp  IMesh.cpp  IRenderer.cpp  IRendererAPI.cpp  IRendererBackend.cpp  IShader.cpp  ITexture.cpp  Material.cpp  MaterialManager.cpp  MeshManager.cpp  OpenGLRenderer.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  TextureManager.cpp  VulkanRenderer.cpp  Window.cpp
src/renderer/OpenGL/: APIBackend.cpp  APIBackend.h  APIRenderer.cpp  APIRenderer.h  DescriptorBuffer.cpp  DescriptorBuffer.h  GLMesh.cpp  GLMesh.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  Mesh.cpp  Mesh.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/renderer/Vulkan/: DescriptorBuffer.cpp  DescriptorBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  ShaderPipeline.cpp  ShaderPipeline.h  Texture.cpp  Texture.h  VKMesh.cpp  VKMesh.h  VKRenderer.cpp  VKRenderer.h  VKShader.cpp  VKShader.h  VKShaderPipeline.cpp  VKShaderPipeline.h  VKTexture.cpp  VKTexture.h  VulkanMesh.cpp  VulkanMesh.h  VulkanRenderer.cpp  VulkanRenderer.h
src/renderer/Vulkan/Backend/: APIBackend.cpp  APIBackend.h  APIRenderer.cpp  APIRenderer.h  Backend.cpp  Backend.h  Buffer.cpp  Buffer.h  CommandBlock.cpp  CommandBlock.h  DescriptorBuffer.cpp  DescriptorBuffer.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  DeviceBuffer.cpp  DeviceBuffer.h  Image.cpp  Image.h  Instance.cpp  Instance.h  MemAllocator.cpp  MemAllocator.h  PipelineBuilder.cpp  PipelineBuilder.h  SampledImage.cpp  SampledImage.h  ScopedWaiter.h  Swapchain.cpp  Swapchain.h  Sync.cpp  Sync.h  VulkanBackend.cpp  VulkanBackend.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBlock.cpp  VulkanCommandBlock.h  VulkanDescriptorBuffer.cpp  (+23 more)
